<resources>
    <string name="app_name">CyphersScanner</string>
    <string name="cyphers">Cyphers</string>
    <string name="scanner">Scanner</string>
    <string name="search_record">전적 검색</string>
    <string name="search_character_rank">캐릭터 랭킹 검색</string>
    <string name="search_rank">공식전 랭킹 검색</string>
    <string name="notice">사이퍼즈 스캐너\n패치 노트</string>
    <string name="goto_homepage"><u>사이퍼즈 공식 홈페이지 이동</u></string>
    <string name="question"><u>문의</u></string>
    <string name="question_notice">게시판 기능은 준비 중입니다.\n문의 사항은\n\n<b>shyunni0331@naver.com</b> \n\n으로 메일 보내 주시면 확인 후 답변드리겠습니다.\n감사합니다.</string>
    <string name="notice_non_enter">사이퍼즈 스캐너 패치 노트</string>
    <string name="version_text">v1.0</string>
    <string name="notice_v1.0.0">사이퍼즈 스캐너가 출시되었습니다!\n부족한 어플이지만 많은 이용 부탁드립니다 :D\n\n사이퍼즈 스캐너는 일반전 유저들의 니즈를 위주로\n 필요한 정보만 사용하였습니다.\n혹시 추가되었으면 하는 정보가 있으시다면 문의하기의 메일로 보내주세요!</string>
    <string name="search_nickname_empty">검색할 닉네임을 입력해 주세요.</string>
    <string name="search_error">오류가 발생했습니다.</string>
    <string name="win_rate">일반전 승률</string>
    <string name="rank_win_rate">공식전 승률</string>
    <string name="player_not_found">플레이어를 찾을 수 없습니다.</string>
    <string name="record_not_found">최근 30일 동안의 일반전 전적이 없습니다.</string>
</resources>