<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.seohyunni.cyphersscanner.MainActivity" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyphers_black"
        tools:context=".view.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cyphers"
                    android:textColor="@color/cyphers_red"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanner"
                    android:textColor="@color/cyphers_yellow"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/underline_gray"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/item_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/main_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <Button
                    android:id="@+id/search_record_btn"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="@string/search_record"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/box_radius_border_yellow"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/search_rank_character_btn"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="@string/search_character_rank"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/box_radius_border_yellow"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/search_rank_btn"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="@string/search_rank"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/box_radius_border_yellow"
                    android:layout_marginEnd="10dp"
                    />

                <Button
                    android:id="@+id/notice_btn"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:text="@string/notice"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/box_radius_border_yellow"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_rink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/item_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/rink_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_gravity="start"
                android:text="@string/goto_homepage"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/rink_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/question"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif-medium"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>