<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.seohyunni.cyphersscanner.view.SearchRecordActivity" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_record_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyphers_black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cyphers"
                    android:textColor="@color/cyphers_red"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanner"
                    android:textColor="@color/cyphers_yellow"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/underline_gray"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/back_button"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/underline" />


        <TextView
            android:id="@+id/title_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_record"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/search_icon"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/title_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:queryBackground="@drawable/search_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>