<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.seohyunni.cyphersscanner.view.NoticeActivity" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyphers_black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cyphers"
                    android:textColor="@color/cyphers_red"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scanner"
                    android:textColor="@color/cyphers_yellow"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/underline_gray"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/back_button"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/underline" />


        <TextView
            android:id="@+id/title_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_non_enter"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/underline"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <com.skydoves.expandablelayout.ExpandableLayout
            android:id="@+id/expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:expandable_duration="200"
            app:expandable_animation="accelerate"
            app:expandable_isExpanded="false"
            app:expandable_parentLayout="@layout/layout_notice_parent"
            app:expandable_secondLayout="@layout/layout_notice_item"
            app:expandable_showSpinner="true"
            app:expandable_spinner="@drawable/notice_spanner"
            app:expandable_spinner_animate="true"
            app:expandable_spinner_margin="14dp"
            app:expandable_spinner_gravity="start"
            app:expandable_spinner_size="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_notice"
        />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>